--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<properties>
 		<cucumber.version>5.5.0</cucumber.version>
 		<assertj.version>3.6.2</assertj.version>
+		<selenium.version>3.141.59</selenium.version>
+		<faker.version>1.0.2</faker.version>
 	</properties>
 
 	<dependencies>
@@ -63,8 +65,14 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<version>${selenium.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>${faker.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
